# alzheimers-eeg-classifier

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: EEG for Alzheimers.docx  README.md
docs/reports/: Technical Research (EEGNet).docx  Technical Research (EEGTransformer).docx  Technical Research(EEGGAT).docx
examples/: inference.py
experiments/: README.md  config_eegnet.yaml  config_gat.yaml  config_transformer.yaml
experiments/results/eeggat/: best_model.pth
experiments/results/eegnet/: best_model.pth
experiments/results/transformer/: best_model.pth
notebooks/: 01-eegnet-training.ipynb  02-transformer-training-ipynb.ipynb  03-gat-training.ipynb  delete.txt
scripts/: train.py
src/: models.py  training.py  utils.py
workflows/: ci.yml
